fix: adjust modal close button position for better alignment

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -53,7 +53,7 @@
     padding-bottom: 1.3rem;
 
     @media (max-width: 1024px) {
-      line-height: 0.95;
+      top: 0.45rem;
     }
 
     &:hover {
